# frictionless-architect

./: .env.sample  .gitignore  AGENTS.md  PROJECT_CONSTITUTION.md  PROJECT_SPECIFICATION.md  README.md  SOLUTION.md  TECHNICAL.md  data-model.md  pyproject.toml  quickstart.md  research.md  sonar-project.properties
.codex/: AGENTS.md
.devcontainer/: devcontainer.json  post-create.sh
.gemini/: settings.json
.github/workflows/: ci.yml
.specify/: init-options.json  integration.json
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  setup-plan.sh  update-agent-context.sh
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
prototype/: business_diagram.puml  create_database.py  motivation_diagram.puml  nodes.yaml  relationships.yaml  visualize_archimate_business.py  visualize_archimate_motivation.py  visualize_graph.py
sample-data/sample-00/: Test Model Full.xml  Test Model.xml
sample-data/sample-01/: sample-1-archimate.puml  sample-1-c4-container.puml  sample-1-c4-context.puml  sample-1-elements.csv  sample-1-relations.csv  sample-1.archimate  sample-1.xml
sample-data/sample-02/: sample-2-archimate.puml  sample-2-c4-container.puml  sample-2-c4-context.puml
sample-data/schema/: archimate3_Diagram.xsd  archimate3_Model.xsd  archimate3_View.xsd
scripts/: install.sh  move-venv.sh  neo4j_schema.py  pre_commit_checks.sh  pre_merge_checks.sh
specs/001-governance-platform/: spec.md
specs/001-governance-platform/contracts/: api.yaml
specs/002-neo4j-schema-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-neo4j-schema-ui/checklists/: requirements.md
specs/002-neo4j-schema-ui/contracts/: api.md
src/frictionless_architect/: __init__.py
src/frictionless_architect/schema/: __init__.py  manager.py
src/frictionless_architect/visualizer/: __init__.py  api.py  cache.py  config.py  data_loader.py  sample_parser.py  sample_validator.py
src/frictionless_architect/visualizer/static/: schema_visualizer.js
src/frictionless_architect/visualizer/templates/: schema_visualizer.html
tests/: __init__.py
tests/api/: conftest.py  test_schema_payload.py  test_schema_status.py  test_schema_view_consistency.py
tests/features/: placeholder.feature
tests/features/steps/: placeholder_steps.py
tests/unit/schema/: test_manager.py
tests/unit/visualizer/: test_cache.py  test_data_loader.py  test_sample_parser.py  test_schema_service.py
