[project]
name = "frictionless-architect"
description = "A project for frictionless architecture and design."
authors = [
    { name = "Stephan Borg", email = "wolffborg1@gmail.com" }
]
readme = "README.md"
packages = [{include = "frictionless_architect", from = "src"}]
include = [
    "config/*",
    "docs/*",
    "CHANGELOG.md",
    "poetry.lock",
]
dynamic = ["version"]

requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "pydantic>=2.0.0",
    "neo4j>=5.10.0,<6.0.0",
    "python-dotenv (>=1.2.2,<2.0.0)",
]

[dependency-groups]
docs = [
    "pdoc (>=16.0.0,<17.0.0)",
]

dev = [
    "commitizen>=4.11.0,<5.0.0",
    "snakeviz>=2.2.2,<3.0.0",
    "locust (>=2.43.3,<3.0.0)",
    "pymarkdownlnt>=0.9.35",
]

tests = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "behave>=1.3.3,<2.0.0",
    "rapidfuzz>=3.14.3,<4.0.0",
    "jaraco.classes>=3.4.0,<4.0.0",
    "jaraco.context>=6.1.1,<7.0.0",
    "jaraco.functools>=4.4.0,<5.0.0",
    "pytest-httpx>=0.24.0,<1.0.0",
]

lint = [
    "types-requests>=2.32.4.20250913,<3.0.0",
    "types-pyyaml>=6.0.12.20250915,<7.0.0",
    "mypy>=1.19.1,<2.0.0",
    "pyright>=1.1.407,<2.0.0",
    "ruff>=0.14.10,<1.0.0",
    "pysonar>=1.3.0.4086",
]

[tool.poetry]
version = "0.0.0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true

[tool.poetry-dynamic-versioning]
# Versions derive from git tags prefixed with "v" (e.g., v1.2.3) and follow semver.
enable = true
vcs = "git"
style = "semver"

[tool.pyright]
typeCheckingMode = "basic"
reportMissingImports = true
reportUnusedVariable = "warning"
reportMissingTypeStubs = "none"
reportUnknownMemberType = false

[tool.mypy]
strict = true
mypy_path = "src"
packages = ["frictionless_architect", "tests"]
show_error_codes = true
ignore_missing_imports = false
allow_redefinition = false
check_untyped_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
plugins = [
  "pydantic.mypy"
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C", "I"]
ignore = [
    "E501",
]
exclude = [
    ".venv",
    ".git",
    "docs",
    "build",
    "dist",
    "__pycache__",
    "*.pyc",
    "*.pyo",
    "*.pyd",
    "env",
    "ENV",
    ".mypy_cache",
    ".ruff_cache",
    ".pytest_cache",
    "*.log",
    ".env*",
    "node_modules",
    "*.lock",
    "*.json",
    "*.md",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["./tests/unit", "./tests/security", "./tests/integration", "./tests/api"]
python_files = "*_test.py test_*.py *_spec.py"
asyncio_default_fixture_loop_scope = "module"
addopts = """
--cov=src
--cov-report=xml:build/coverage.xml
--cov-report=term-missing 
--junitxml=build/unit-tests.xml
"""
asyncio_mode = "auto"
cache_dir = "/tmp/.pytest_cache"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "build/coverage-reports"

[tool.coverage.xml]
output = "build/coverage.xml"

[tool.behave]
paths = [
    "tests/features/"
]

[tool.pymarkdown]
# MD010 - no hard tabs
plugins.md010.enabled = true
# MD007 - unordered list indentation
plugins.md007.indent = 4
# MD004 - unordered list style
plugins.md004.style = "dash"

[tool.pymarkdown.plugins.md013]
line_length = 120

[build-system]
requires = ["poetry-core>=2.0.0", "poetry-dynamic-versioning>=1.6.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

